bubba-frontend (1.9.23) claire; urgency=low

  * remove the lonesome alert in the old backup add dir dialog 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 25 Mar 2010 20:47:00 +0100

bubba-frontend (1.9.22) claire; urgency=low

  * make download as zip remember what directory it's in 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 25 Mar 2010 17:57:22 +0100

bubba-frontend (1.9.21) claire; urgency=low

  *  set browser class
  * remake main layout as table to get sidebar better placement 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 25 Mar 2010 17:30:27 +0100

bubba-frontend (1.9.20.1) claire; urgency=low

  * test 96% error 

 -- Carl Fürstenberg <carl@excito.com>  Wed, 24 Mar 2010 18:22:45 +0100

bubba-frontend (1.9.19) claire; urgency=low

  * add throbber
  * bugfixes
  * testbuild

 -- Carl Fürstenberg <carl@excito.com>  Wed, 24 Mar 2010 18:01:43 +0100

bubba-frontend (1.9.18) claire; urgency=low

  * Visual updates, test build

 -- PA Nilsson <pa@excito.com>  Wed, 24 Mar 2010 16:06:42 +0100

bubba-frontend (1.9.17) claire; urgency=low

  * Test build

 -- PA Nilsson <pa@excito.com>  Wed, 24 Mar 2010 09:27:30 +0100

bubba-frontend (1.9.16) karmic; urgency=low

  * test build 

 -- Carl Fürstenberg <carl@excito.com>  Tue, 23 Mar 2010 18:03:35 +0100

bubba-frontend (1.9.15) claire; urgency=low

  * changed from dispabled input field when user can not edit to just print user (or printer) name.
  * Multiple alignment and text fixes.  

 -- PA Nilsson <pa@excito.com>  Mon, 22 Mar 2010 16:46:39 +0100

bubba-frontend (1.9.14) claire; urgency=low

  * adding samba to services 

 -- Carl Fürstenberg <carl@excito.com>  Mon, 22 Mar 2010 11:25:50 +0100

bubba-frontend (1.9.13) claire; urgency=low

  * close menu when clicking on link 
  * add alias fucntionallity to menu model
  * remove bounch of obsolete images

 -- Carl Fürstenberg <carl@excito.com>  Fri, 19 Mar 2010 18:57:57 +0100

bubba-frontend (1.9.12) claire; urgency=low
