@@ -1,8 +1,12 @@
 bubba-frontend (1.9.23) claire; urgency=low
 
+  [ Carl Fürstenberg ]
   * remove the lonesome alert in the old backup add dir dialog 
 
- -- Carl Fürstenberg <carl@excito.com>  Thu, 25 Mar 2010 20:47:00 +0100
+  [ Tor Krill ]
+  * Rework permissions dialog
+
+ -- Tor Krill <tor@excito.com>  Thu, 25 Mar 2010 23:10:20 +0100
 
 bubba-frontend (1.9.22) claire; urgency=low
 
